{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 142,
  "lineage": "2940dc20-7473-2d7d-8de3-ed30414d4c51",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:558063863569:vpc/vpc-0375410208a3c1df5",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0729e267f4aa78b3d",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-03c3001720462346c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0375410208a3c1df5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09e508015ab4a3961",
            "owner_id": "558063863569"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:558063863569:internet-gateway/igw-0f54934c8abb29bc7",
            "id": "igw-0f54934c8abb29bc7",
            "owner_id": "558063863569",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-07d10c9f2aaa9ff42"
          },
          "dependencies": [
            "aws_vpc.oterrafrom_study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:558063863569:loadbalancer/app/oterraform-asg-example/67b81e7392472776",
            "arn_suffix": "app/oterraform-asg-example/67b81e7392472776",
            "desync_mitigation_mode": "defensive",
            "dns_name": "oterraform-asg-example-1912736411.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:558063863569:loadbalancer/app/oterraform-asg-example/67b81e7392472776",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "oterraform-asg-example",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a304f6efa7894356"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-012d30f164503d1df"
              },
              {
                "subnet_id": "subnet-016efffead265094d"
              },
              {
                "subnet_id": "subnet-07a967823b6698bc6"
              },
              {
                "subnet_id": "subnet-0bd6288670f5ab966"
              }
            ],
            "subnets": [
              "subnet-012d30f164503d1df",
              "subnet-016efffead265094d",
              "subnet-07a967823b6698bc6",
              "subnet-0bd6288670f5ab966"
            ],
            "vpc_id": "vpc-07d10c9f2aaa9ff42",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.security_group",
            "aws_subnet.oterraform_study_private1",
            "aws_subnet.oterraform_study_private2",
            "aws_subnet.oterraform_study_public1",
            "aws_subnet.oterraform_study_public2",
            "aws_vpc.oterrafrom_study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:558063863569:listener/app/oterraform-asg-example/67b81e7392472776/6dff88ef30569445",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:558063863569:listener/app/oterraform-asg-example/67b81e7392472776/6dff88ef30569445",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:558063863569:loadbalancer/app/oterraform-asg-example/67b81e7392472776",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb",
            "aws_security_group.security_group",
            "aws_subnet.oterraform_study_private1",
            "aws_subnet.oterraform_study_private2",
            "aws_subnet.oterraform_study_public1",
            "aws_subnet.oterraform_study_public2",
            "aws_vpc.oterrafrom_study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "aws_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:558063863569:targetgroup/oterraform-asg-example/7e3a63218c01148e",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:558063863569:listener-rule/app/oterraform-asg-example/67b81e7392472776/6dff88ef30569445/72f859374e3ba618",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:558063863569:listener-rule/app/oterraform-asg-example/67b81e7392472776/6dff88ef30569445/72f859374e3ba618",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:558063863569:listener/app/oterraform-asg-example/67b81e7392472776/6dff88ef30569445",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb",
            "aws_lb_listener.lb_listener",
            "aws_lb_target_group.asg",
            "aws_security_group.security_group",
            "aws_subnet.oterraform_study_private1",
            "aws_subnet.oterraform_study_private2",
            "aws_subnet.oterraform_study_public1",
            "aws_subnet.oterraform_study_public2",
            "aws_vpc.oterrafrom_study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:558063863569:targetgroup/oterraform-asg-example/7e3a63218c01148e",
            "arn_suffix": "targetgroup/oterraform-asg-example/7e3a63218c01148e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:558063863569:targetgroup/oterraform-asg-example/7e3a63218c01148e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "oterraform-asg-example",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07d10c9f2aaa9ff42"
          },
          "dependencies": [
            "aws_vpc.oterrafrom_study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:558063863569:security-group/sg-0a304f6efa7894356",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a304f6efa7894356",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "default_instance_security_group",
            "name_prefix": "",
            "owner_id": "558063863569",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07d10c9f2aaa9ff42"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.oterrafrom_study_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "oterraform_study_private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:558063863569:subnet/subnet-0bd6288670f5ab966",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd6288670f5ab966",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "558063863569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "oterraform_study_private1"
            },
            "tags_all": {
              "Name": "oterraform_study_private1"
            },
            "vpc_id": "vpc-07d10c9f2aaa9ff42"
          },
          "dependencies": [
            "aws_vpc.oterrafrom_study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "oterraform_study_private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:558063863569:subnet/subnet-07a967823b6698bc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2d",
            "availability_zone_id": "apne2-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a967823b6698bc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "558063863569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "oterraform_study_private2"
            },
            "tags_all": {
              "Name": "oterraform_study_private2"
            },
            "vpc_id": "vpc-07d10c9f2aaa9ff42"
          },
          "dependencies": [
            "aws_vpc.oterrafrom_study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "oterraform_study_public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:558063863569:subnet/subnet-016efffead265094d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016efffead265094d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "558063863569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "oterraform_study_public1"
            },
            "tags_all": {
              "Name": "oterraform_study_public1"
            },
            "vpc_id": "vpc-07d10c9f2aaa9ff42"
          },
          "dependencies": [
            "aws_vpc.oterrafrom_study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "oterraform_study_public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:558063863569:subnet/subnet-012d30f164503d1df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012d30f164503d1df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "558063863569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "oterraform_study_public2"
            },
            "tags_all": {
              "Name": "oterraform_study_public2"
            },
            "vpc_id": "vpc-07d10c9f2aaa9ff42"
          },
          "dependencies": [
            "aws_vpc.oterrafrom_study_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "oterrafrom_study_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:558063863569:vpc/vpc-07d10c9f2aaa9ff42",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0025ba10b8b0ff03f",
            "default_route_table_id": "rtb-0fd06c10249dd6188",
            "default_security_group_id": "sg-06592f614c3c6b128",
            "dhcp_options_id": "dopt-03c3001720462346c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07d10c9f2aaa9ff42",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fd06c10249dd6188",
            "owner_id": "558063863569",
            "tags": {
              "Name": "oterraform_study"
            },
            "tags_all": {
              "Name": "oterraform_study"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}